...
                android:text="@string/empty_list_cities_subtitle"
                android:textSize="16sp"/>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_add"/>

...
